Replace deprecated Collectors.toList with toList, simplify logging statements, and clean up redundant null checks and imports.